
Wed Oct  4 14:36:51 CEST 2000

	- Added patch by Christof Petig <christof.petig@wtal.de> to fix
	  missing NOTICE.

Wed Oct 11 16:49:36 CEST 2000

	- Synced preproc.y with gram.y.

Thu Oct 12 20:13:00 CEST 2000

	- Changed parser to accept a variable instead of a constant wherever
	  possible.

Mon Oct 16 21:33:17 CEST 2000

	- Fixed handling of variables in connect rule.

Tue Oct 17 08:09:16 CEST 2000

	- Simplified parsing of connect rule.

Tue Oct 17 17:36:30 CEST 2000

	- Fixed some bugs in C language parsing. 

Sun Oct 22 15:35:53 CEST 2000

	- Fixed typos in descriptor.c.

Wed Oct 25 08:53:07 CEST 2000

	- Added some more C constructs to the parser.

Wed Oct 25 21:22:17 CEST 2000

	- Synced gram.y and preproc.y.

Son Oct 29 11:26:06 CET 2000

	- Removed multibyte stuff since client does not know about encoding
	  in the backend.
	- Fixed quoting bug reported by Sascha Demetrio (sd@b-comp.de).

Mon Oct 30 15:27:12 CET 2000

	- Synced gram.y and preproc.y. 

Tue Oct 31 16:09:55 CET 2000

	- Added patch by Christof Petig <christof.petig@wtal.de> fixing some
	  parser bugs.

Fri Nov  3 11:34:43 CET 2000

	- Synced pgc.l with scan.l.
	- Synced gram.y and preproc.y.

Sat Nov  4 17:42:43 CET 2000

	- Added patch by Christof Petig to fix several small bugs.

Thu Nov  9 14:40:18 CET 2000

	- Synced gram.y and preproc.y. 
	- Synced keyword.c.
	- Added just another patch by Christof Petig.

Sat Nov 18 16:28:11 CET 2000

	- Synced gram.y and preproc.y.         

Mon Dec 18 12:27:52 CET 2000

	- Synced gram.y and preproc.y.
	- Synced keyword.c.
	- Added several small patches from Christof.

Fri Dec 22 13:33:31 CET 2000

	- Fixed bug in a connect statement using varchars.
	- Synced gram.y and preproc.y.   

Mon Jan 22 17:56:02 CET 2001

	- Synced gram.y and preproc.y.   
	- Added #include "postgres.h" to pgc.l.

Tue Jan 23 08:54:14 CET 2001

	- Moved database name handling to libecpg.
	- Set ecpg version to 2.8.0. 
	- Set library version to 3.2.0.